--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
           <img
             src="https://images.unsplash.com/photo-1561948955-570b270e7c36?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80"
             class="iconDetails"
+            title="cat.jpeg"
           />
         </div>
         <div class="title" style="align-self: center">cat.jpeg</div>
@@ -24,6 +25,7 @@
           <img
             src="https://images.unsplash.com/photo-1606787620819-8bdf0c44c293?ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80"
             class="iconDetails"
+            title="cooking couple shoot portofilio(1).jpg"
           />
         </div>
         <div class="title" style="align-self: center">
@@ -35,6 +37,7 @@
           <img
             src="https://images.unsplash.com/photo-1539367628448-4bc5c9d171c8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80"
             class="iconDetails"
+            title="bali-kelingking-beach-plastic-removal-drive.key"
           />
         </div>
         <div class="title" style="align-self: center">
@@ -46,6 +49,7 @@
           <img
             src="https://images.unsplash.com/photo-1623206837956-07dab21608f6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80"
             class="iconDetails"
+            title="NextByk Investor Pitch 2021.ppt"
           />
         </div>
         <div class="title" style="align-self: center">
@@ -57,6 +61,7 @@
           <img
             src="https://images.unsplash.com/photo-1526628953301-3e589a6a8b74?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1000&q=80"
             class="iconDetails"
+            title="interns-performance-report-june-2021.key"
           />
         </div>
         <div class="title" style="align-self: center">
@@ -65,11 +70,13 @@
       </li>
     </ul>
 
-    <figure class="container2">
+    <div class="container2" style="text-align: center;">
       <img
       src="https://images.unsplash.com/photo-1561948955-570b270e7c36?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80"
       class = "bigImage" /img>
-      <figcaption>cat.jpeg</figcaption>
-    </figure>
+    <br>
+        <div class="title caption">cat.jpeg</div>
+      </div>
+    </div>
   </body>
 </html>
